tests/ui/response_format_unknown.rs
use openrouter_toolkit::response_format_model;

const MODEL: &str = response_format_model!("example/not-a-real-model");

fn main() {
    let _ = MODEL;
}
